# chinese_holiday_rs

./: Cargo.toml  README.md  README_ZH.md
.github/workflows/: check_build.yml  publish_release.yml  release.yml
examples/: chrono-compatible.rs  simple.rs
script/: check_version.sh
src/: constants.rs  day_kind.rs  lib.rs  ymd.rs
